--- a/package.json
+++ b/package.json
@@ -4,29 +4,33 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.44",
-    "@ai-sdk/react": "^2.0.61",
-    "@openrouter/ai-sdk-provider": "^1.2.0",
-    "ai": "^5.0.61",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "zod": "^4.1.12"
+    "@ai-sdk/openai": "^1.2.1",
+    "@ai-sdk/react": "^1.1.21",
+    "@openrouter/ai-sdk-provider": "^0.4.3",
+    "ai": "^4.1.54",
+    "lucide-react": "^0.546.0",
+    "marked": "^16.4.1",
+    "next": "15.2.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
+    "tailwind-scrollbar": "^4.0.2",
     "typescript": "^5"
   }
 }
