--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.2.1",
     "@ai-sdk/react": "^1.1.21",
+    "@octokit/rest": "^22.0.0",
     "@openrouter/ai-sdk-provider": "^0.4.3",
     "ai": "^4.1.54",
     "lucide-react": "^0.546.0",
@@ -24,13 +25,14 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@octokit/types": "^15.0.1",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
     "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
